Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100355

[REG 6.2.2 - 6.2.3] Custom image providers do not scale on High DPI displays

    XMLWordPrintable

Details

    • Linux/X11
    • 2d677cfb1b (qt/qtdeclarative/6.2) c9ffa3b40c (qt/qtdeclarative/6.3) 3c3acf7334 (qt/qtdeclarative/dev) 2d677cfb1b (qt/tqtc-qtdeclarative/6.2) c9ffa3b40c (qt/tqtc-qtdeclarative/6.3) 3c3acf7334 (qt/tqtc-qtdeclarative/dev)

    Description

      Our custom image provider for font icons started to produce blurry images on High DPI displays following an upgrade to Qt 6.2.3. We discovered that the image provider is no longer automatically scaling the images to their proper sizes.

      One solution we tried was to manually multiply the sourceSize by (Screen.devicePixelRatio * 2) but this resulted in broken item layouts where Buttons and IconImages became too big due to their readonly implicit sizes.

      The problem can be reproduced by the imageprovider example found in qtdeclarative. You will notice that the generated pixmaps are not scaled correctly.

      I think QTBUG-58416 could be relevant.

      Environment:

      High DPI scaling factor: 3
      DevicePixelRatio: 3
      

      Attachments

        1. example.zip
          65 kB
        2. example4.zip
          99 kB
        3. qtbug100355.zip
          3 kB
        4. qtbug100355-3.zip
          99 kB
        5. qtbug100355-3-zip-after-dev-patch.png
          qtbug100355-3-zip-after-dev-patch.png
          265 kB
        6. qtbug100355-3-zip-before-dev-patch.png
          qtbug100355-3-zip-before-dev-patch.png
          271 kB
        7. qtbug100355-app.png
          qtbug100355-app.png
          310 kB
        8. qtbug100355-font-book.png
          qtbug100355-font-book.png
          169 kB
        9. qtbug100355-v2.zip
          101 kB
        10. screenshot.png
          screenshot.png
          20 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mitch_curtis Mitch Curtis
              jeremykim232323 Jeremy Kim
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes