Ensure that image providers scale by default

This was broken in b6f085a275c76912862463657c2a91e35bd8936b.

Change-Id: Ic2f9da5cf18098528de3165867f2befbaf0ed1c2
Fixes: QTBUG-100355
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit 3c3acf73346bed194db9b76b99196ece5f03b1b1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>